[project]
name = "bitkub-python"
version = "0.1.0"
authors = [{ name = "Praphan Klairith", email = "p.klairith@gmail.com" }]
description = "A Python library for Bitkub API"
requires-python = ">=3.8"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
]

[project.urls]
"Homepage" = "https://github.com/xbklairith/bitkub-python"
"Bug Tracker" = "https://github.com/xbklairith/bitkub-python/issues"
